<resources>
    <string name="app_name">AndroidLittleHappy</string>
    <string name="title_activity_act_main">LittleHappy</string>
    <string name="lblUserID">使用者ID</string>
    <string name="lblEmail">信箱</string>
    <string name="lblPassword">密碼</string>
    <string name="lblPasswordCheck">重複輸入密碼</string>
    <string name="lblUserName">暱稱</string>

    <string name="btnLogin">登入</string>
    <string name="btnRegister">註冊</string>
    <string name="btnCancel">取消</string>
    <string name="title_home">title_home</string>
    <string name="title_chat">chat</string>
    <string name="title_history">history</string>
    <string name="title_profile">profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_act_map">Map</string>
    <string name="title_activity_act_history">ActHistory</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_act_chat">ActChat</string>
</resources>
