<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/lblUserID"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/lblEmail"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtpassWD"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/lblPassword"
            android:inputType="textPassword"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtpassWDCheck"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/lblPasswordCheck"
            android:inputType="textPassword"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtuserNickName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/lblUserName"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/imgLuckyPic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/colorMoccasin"
            android:src="@drawable/fish01"
            android:tooltipText="按下更換顯示圖片" />

        <TextView
            android:id="@+id/txtLuckyPic"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="0"
            android:visibility="invisible" />

        <RatingBar
            android:id="@+id/rtbStar"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:theme="@style/RatingBar" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/btnRegister"
            android:textSize="20dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="2">
        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/btnCancel"
            android:id="@+id/btnCancel"
            />


    </LinearLayout>



</LinearLayout>
