<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        >
        <EditText
            android:id="@+id/txtuserId"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/lblUserID"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/txtpassWD"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/lblPassword"
            android:inputType="textPassword"
            android:textSize="20dp" />

        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="google"
            android:id="@+id/btnLoginByGoogle"
            />
        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="facebook"
            android:id="@+id/btnLoginByFacebook"
            />
        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/btnLogin"
            android:textSize="20dp"
            android:id="@+id/btnLogin"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/btnCancel"
            android:id="@+id/btnCancel"
            />


    </LinearLayout>



</LinearLayout>
